test/message/syntactic-tail-call-in-try-catch-finally.out
*%(basename)s:15: SyntaxError: Tail call expression in catch block when finally block is also present.
    return continue f();
           ^
SyntaxError: Tail call expression in catch block when finally block is also present.
